--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,3 +14,8 @@ jobs:
       - uses: athul/waka-readme@master
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
+          SHOW_LANGUAGE_PER_REPO: "True"
+          SHOW_COMMIT: "True"
+          SHOW_OS: "False"
+          SHOW_DAYS_OF_WEEK: "True"
+          SHOW_LANGUAGE: "False"
